[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/character/tabs/BackgroundTab.gd" id="1_0"]
[ext_resource type="Theme" path="res://themes/bg3_theme.tres" id="2_0"]

[node name="BackgroundTab" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0")

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleMargin" type="MarginContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 0.0
anchor_bottom = 0.0
anchor_left = 0.0
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 0
offset_bottom = 80.0
custom_minimum_size = Vector2(0, 80)
size_flags_vertical = 0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="TitleLabel" type="Label" parent="MainPanel/TitleMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 64
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "CHOOSE YOUR BACKGROUND"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UnifiedScroll" type="ScrollContainer" parent="MainPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_top = 0.0
anchor_left = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_top = 80.0
offset_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
follow_focus = false

[node name="BackgroundGrid" type="GridContainer" parent="MainPanel/UnifiedScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
columns = 3

[node name="ErrorLabel" type="Label" parent="MainPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = -120.0
theme = ExtResource("2_0")
text = ""
horizontal_alignment = 1
vertical_alignment = 1
modulate = Color(1, 0.2, 0.2, 0)
visible = false

[node name="BackButton" type="Button" parent="MainPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
offset_left = 40.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -20.0
custom_minimum_size = Vector2(160, 80)
theme = ExtResource("2_0")
text = "‚Üê Back"
visible = false

[node name="ConfirmBackgroundButton" type="Button" parent="MainPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -20.0
custom_minimum_size = Vector2(300, 80)
theme = ExtResource("2_0")
text = "Select a Background"
disabled = true

[connection signal="pressed" from="MainPanel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MainPanel/ConfirmBackgroundButton" to="." method="_on_confirm_button_pressed"]
